@@ -290,6 +290,9 @@ about Zerolog integration.
 [float]
 [[supported-tech-object-storage]]
 === Object Storage
+
+[float]
+==== Amazon S3
 We provide instrumentation for AWS S3. This is usable with
 https://github.com/aws/aws-sdk-go[AWS SDK Go].
 
@@ -298,8 +301,19 @@ about AWS SDK Go instrumentation.
 
 [float]
 [[supported-tech-messaging-systems]]
-=== Object Storage
+=== Messaging Systems
+
+[float]
+==== Amazon SQS
 We provide instrumentation for AWS SQS. This is usable with
+https://github.com/aws/aws-sdk-go[AWS SDK Go].
+
+See <<builtin-modules-apmawssdkgo, module/apmawssdkgo>> for more information
+about AWS SDK Go instrumentation.
+
+[float]
+==== Amazon SNS
+We provide instrumentation for AWS SNS. This is usable with
 https://github.com/aws/aws-sdk-go[AWS SDK Go].
 
 See <<builtin-modules-apmawssdkgo, module/apmawssdkgo>> for more information
